--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 /.venv
 /temp
 /WebServerStream
-/Pi/users.db
-/Pi/__pycache__
-/WebServer/users.db
-/WebServer/__pycache__
+*.db
+/.idea
+*/__pycache__
